fureverfriends/static/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
   
}

.container {
    display: grid;
    height: 100vh;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 0.8fr 1.2fr 0.8fr;
    grid-template-areas:
        "logo navbar navbar navbar"
        "main-image main-image main-image main-image"
        "main1 main1 main2 main2"
        "footer footer footer footer";


}

.container-checklist {
    display: grid;
    height: 100vh;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 0.8fr 1.2fr 0.8fr;
    grid-template-areas:
        "logo navbar navbar navbar"
        "check-image check-image check-image check-image"
        "check-title check-title check-title check-title"
        "footer footer footer footer";

}

.logo {
    grid-area: logo;
    background-color: blue;
}

.logo-text {
    display: flex;
    justify-content: center;
    color: #fff;
    margin: 5%;
}



.form {
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10%;

}


.navbar {
    background-color: blue;
    grid-area: navbar;
}

.navbar ul li {
    list-style-type: none;
}

.navbar ul {
    display: flex;
    justify-content: center;
    text-decoration: none;
}

.navbar li {
    text-decoration: none;
    padding: 30px;
}

.navbar a {
    text-decoration: none;
    color: #fff;
}

.navbar a:hover {
    text-decoration: underline;
}

.navbar a:active {
    color: red;
}

.welcome {
    display: block;
    grid-area: welcome;
}

.welcome-message{
    margin-left: 50%;
}

.Hi{
    
        display: flex;
        justify-content: center;
   
    
}

.welcome-info {
    margin-left: 3%;
    margin-right: 3%;
    padding: 10px;
}

.main1 {
    background-color: green;
    grid-area: main1;
}



.main2 {
    background-color: pink;
    grid-area: main2;
}

.mission-heading {
    display: flex;
    justify-content: center;
}

.about{
    
        display: flex;
        justify-content: center;
    
}


.rehoming{
    
        display: flex;
        justify-content: center;
    
}


.book-meeting{
    display: flex;
    justify-content: center;
}

.mission-info {
    margin-left: 3%;
    margin-right: 3%;
    padding: 10px;
}

.main-image {
    grid-area: main-image;
}


.rabbit-image {
    width: 100%;
    object-fit: cover;
    overflow: hidden;
    height: 400px;
}

.guinea-image {
    width: 100%;
    height: 400px;
    object-fit: cover;
}

.hedgehog-image {
    width: 100%;
    height: 400px;
    object-fit: cover;
}

.squirell-banner {
    width: 100%;
    height: 400px;
    object-fit: cover;
}

.checklist-title-container {
    grid-area: check-title;
}

.check-image-container {
    grid-area: check-image;
}

.viewing-form{
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10%;
}

.viewing-label{
    margin-bottom: 20px;
}



.book-a-viewing{
    margin-top: 10%;
    width: 25%;
}

.your-booking{
    display: flex;
    justify-content: center;
    margin-top: 5%;
    margin-bottom: 3%;
}

.read-list{
    display: block;
    font-size: 20px;
    margin-left: 25%;
    margin-bottom: 2%;
   }

.book-meeting{
    margin-top: 5%;
}


.footer {
    background-color: brown;
    grid-area: footer;
}

.footer ul {
    display: flex;
    justify-content: center;
    text-decoration: none;
    list-style-type: none;
}

.footer li {
    text-decoration: none;
    padding: 30px;
    list-style-type: none;
    height: 50px;
    width: 100px;
    font-size: 100%;
}

.footer a {
    text-decoration: none;
    color: #fff;
}


@media only screen and (max-width: 1000px){
    .container {
        display: grid;
        height: 100vh;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 0.8fr 1fr 1fr 1.2fr 0.8fr;
        grid-template-areas:
            "logo"
            "navbar"
            "main-image"
            "main1"
            "main2"
            "footer";
    
    
    }

    .container-checklist {
        display: grid;
        height: 100vh;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: 1fr 0.8fr 1fr 1fr 1.2fr 0.8fr;
        grid-template-areas:
            "logo"
            "navbar"
            "check-image"
            "check-title"
            "check-title"
            "footer";
    
    }

    .navbar ul {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        text-decoration: none;
    }

    .navbar li {
        text-decoration: none;
        padding: 20px;
    }

    
.read-list{
    display: block;
    font-size: 15px;
    margin-left: 25%;
    margin-bottom: 4%;
   }

}

